Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -213,5 +213,46 @@ In an **acquisition**, a company purchases another company's assets, resulting i
 
 <img width="464" alt="mergers" src="https://github.com/user-attachments/assets/0bdad079-74a7-462c-893f-60f53a65fc1a" />
 
+Let's explore how these processes intersect with cybersecurity measures:
+
+Acquisitions and Mergers: Acquisitions and mergers introduce heightened risks such as information disclosure, data loss, and downtime. Without proper security considerations, the risks associated with obtained products persist throughout their deployment lifecycle. To mitigate these risks, it's essential to conduct thorough evaluations and integrate security assessments during the acquisition process.
+
+Divestitures: Divestitures involve selling off parts of an organization, necessitating stringent security measures to prevent data leakage and maintain confidentiality. Cybersecurity professionals must collaborate closely with business and legal teams to identify and mitigate potential vulnerabilities. Additionally, segmenting the Information Security Management System (ISMS) ensures compliance without revealing sensitive information during audits.
+
+When assessing a third party for security integration, take into account the following procedures as effective chances to evaluate the 3rd party:
+1. Conduct an On-Site Assessment: Visit the organization's premises to conduct interviews with staff and observe their operational practices.
+2. Review Document Exchange: Investigate how data and documents are exchanged, along with the formal procedures for conducting assessments and reviews.
+3. Review Processes and Policies: Request copies of security policies, processes, procedures, as well as documentation of incidents and responses for thorough examination.
+4. Third-Party Audit: Engage an independent third-party auditor, accredited by the American Institute of Certified Public Accountants (AICPA), to conduct an impartial review of the entity's security infrastructure based on Service Organization Control (SOC) reports.
+
+**System and Organization Controls (SOC)** reports are independent audit reports that evaluate the security, availability, and compliance of an organization’s systems, particularly cloud service providers and third-party vendors. These reports are critical in risk management, vendor assessments, and regulatory compliance.
+There are three main types of SOC reports, each serving different purposes:
+
+**SOC 1: Financial Reporting Controls**
+- Purpose: Evaluates controls related to financial transactions and reporting.
+- Audience: Accounting and finance teams, auditors, and companies relying on a vendor for financial processing (e.g., payroll, accounting systems).
+- Example: A payroll processing service undergoes a SOC 1 audit to prove its system properly calculates and processes salaries without errors.
+
+**SOC 2: Security, Availability, and Privacy Controls**
+- Purpose: Focuses on security, availability, processing integrity, confidentiality, and privacy of data (based on the AICPA Trust Services Criteria).
+- Audience: IT, cybersecurity, and compliance teams evaluating third-party vendors.
+- Types:
+SOC 2 Type I: Evaluates security controls at a single point in time (design effectiveness).
+SOC 2 Type II: Evaluates controls over a longer period (3-12 months) to verify operational effectiveness.
+- Example: A cloud service provider (e.g., AWS, Google Cloud) undergoes a SOC 2 audit to prove it secures customer data properly.
+
+**SOC 3: Publicly Available SOC 2 Report
+- Purpose: A high-level summary of SOC 2 findings, meant for public distribution.
+- Audience: Potential customers and stakeholders who want to confirm a company’s security posture without seeing detailed audit results.
+- Example: A SaaS company publishes a SOC 3 report on its website to reassure customers about its security compliance.
+
+SOC reports are a crucial part of third-party risk management and compliance.
+
+| SOC Type  | Purpose                                                                                     | Audience                                                                                           | Types (if any)                                               | Example                                                                                              |
+|-----------|---------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|---------------------------------------------------------------|------------------------------------------------------------------------------------------------------|
+| SOC 1     | Evaluates controls related to financial transactions and reporting.                         | Accounting and finance teams, auditors, and companies relying on a vendor for financial processing | –                                                             | A payroll processing service undergoes a SOC 1 audit to prove its system properly calculates salaries. |
+| SOC 2     | Focuses on security, availability, processing integrity, confidentiality, and privacy of data (AICPA Trust Services Criteria). | IT, cybersecurity, and compliance teams evaluating third-party vendors                             | Type I: Design effectiveness at a point in time  <br> Type II: Operational effectiveness over time | A cloud provider undergoes a SOC 2 audit to prove it secures customer data properly.                  |
+| SOC 3     | High-level summary of SOC 2 findings for public distribution.                               | Potential customers and stakeholders                                                                | –                                                             | A SaaS company publishes a SOC 3 report online to reassure customers about its security compliance.  |
+
 
 
