Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -241,7 +241,7 @@ SOC 2 Type I: Evaluates security controls at a single point in time (design effe
 SOC 2 Type II: Evaluates controls over a longer period (3-12 months) to verify operational effectiveness.
 - Example: A cloud service provider (e.g., AWS, Google Cloud) undergoes a SOC 2 audit to prove it secures customer data properly.
 
-**SOC 3: Publicly Available SOC 2 Report
+**SOC 3: Publicly Available SOC 2 Report**
 - Purpose: A high-level summary of SOC 2 findings, meant for public distribution.
 - Audience: Potential customers and stakeholders who want to confirm a company’s security posture without seeing detailed audit results.
 - Example: A SaaS company publishes a SOC 3 report on its website to reassure customers about its security compliance.
@@ -254,5 +254,49 @@ SOC reports are a crucial part of third-party risk management and compliance.
 | SOC 2     | Focuses on security, availability, processing integrity, confidentiality, and privacy of data (AICPA Trust Services Criteria). | IT, cybersecurity, and compliance teams evaluating third-party vendors                             | Type I: Design effectiveness at a point in time  <br> Type II: Operational effectiveness over time | A cloud provider undergoes a SOC 2 audit to prove it secures customer data properly.                  |
 | SOC 3     | High-level summary of SOC 2 findings for public distribution.                               | Potential customers and stakeholders                                                                | –                                                             | A SaaS company publishes a SOC 3 report online to reassure customers about its security compliance.  |
 
+
+:link: In its Service Trust Portal Microsoft explains how its cloud services protect your data, and how you can manage cloud data security and compliance for your organization. You can find all available reports (included SOC reports) here: https://servicetrust.microsoft.com/
+
+:bulb: **Audit the auditor:** You are accountable to verify the credibility and integrity of those responsible for evaluating or assessing your organization's activities, processes, or compliance.
+
+There are two more important concepts to understand when talking about organizational processes: business enablement and process enhancement.
+Business Enablement refers to the process of empowering an organization to take on new opportunities, markets, or capabilities. It involves leveraging technology, innovation, or strategic changes to open new possibilities. This concept goes beyond optimizing existing operations; it creates value by enabling activities or services that were previously out of reach.
+Process Enhancement refers to improving existing processes to increase efficiency, reduce waste, and enhance the quality of outcomes. This typically involves process re-engineering—redesigning workflows, systems, or operations to achieve better performance.
+
+| Category     | Business Enablement                          | Process Enhancement                        |
+|--------------|-----------------------------------------------|---------------------------------------------|
+| **Objective**| Create new opportunities and capabilities     | Improve existing operations                 |
+| **Focus**    | Innovation and new value creation             | Optimization and efficiency                 |
+| **Approach** | Strategic and forward-looking                 | Tactical and performance-oriented           |
+| **Examples** | Entering a new market <br> Launching new tech | Automating workflows <br> Reducing waste    |
+| **Outcome**  | Expands business horizons                     | Boosts competitiveness and margins          |
+
+Governance committees play a crucial role in overseeing organizational structures and practices (also during mergers, acquisition and divestitures). A governance committee is a group of stakeholders responsible for overseeing an organization's cybersecurity strategy, policies, and compliance. It ensures that cybersecurity efforts align with the organization's goals, risk appetite, and regulatory requirements.
+Key Functions of a Governance Committee are usually:
+- Strategic Oversight: Sets the direction for cybersecurity initiatives, ensuring they support business objectives.
+- Policy Development: Approves and reviews security policies and ensures they are updated regularly.
+- Risk Management: Monitors cybersecurity risks and ensures appropriate mitigation measures are in place.
+- Compliance: Ensures adherence to regulatory and legal requirements for cybersecurity.
+- Accountability: Assigns roles and responsibilities for cybersecurity and holds teams accountable for implementation and performance.
+
+```mermaid
+flowchart TD
+    style GCommittee fill:#eee,stroke:#333,stroke-width:2
+    style Strategic fill:#fff,stroke:#666
+    style Policy fill:#fff,stroke:#666
+    style Risk fill:#fff,stroke:#666
+    style Compliance fill:#fff,stroke:#666
+    style Accountability fill:#fff,stroke:#666
+
+    GCommittee["Governance Committee<br><sub><i>Key Functions</i></sub>"]:::header
+
+    GCommittee --> Strategic["Strategic Oversight<br><sub>Sets cybersecurity direction aligned with business goals</sub>"]
+    GCommittee --> Policy["Policy Development<br><sub>Approves and reviews security policies regularly</sub>"]
+    GCommittee --> Risk["Risk Management<br><sub>Monitors cyber risks and ensures mitigation</sub>"]
+    GCommittee --> Compliance["Compliance<br><sub>Ensures legal and regulatory adherence</sub>"]
+    GCommittee --> Accountability["Accountability<br><sub>Assigns roles and ensures responsibility</sub>"]
+
+    classDef header fill:#eee,stroke:#333,stroke-width:2
+```
 
 
