Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -299,4 +299,88 @@ flowchart TD
     classDef header fill:#eee,stroke:#333,stroke-width:2
 ```
 
+Who Typically Participates in a governance committee:
+- Senior executives (e.g., CIO, CISO, or CTO)
+- Legal and compliance officers
+- Risk management professionals
+- Representatives from business units
+- Board members in larger organizations
+- Governance committees provide valuable insights and recommendations to ensure a secure environment. Collaborating with governance committees enhances transparency and accountability in security governance processes.
 
+:necktie: A governance committee is more likely to be present in companies that face high risks, regulatory pressures, or operational complexity. It reflects a mature and proactive approach to cybersecurity management.
+
+SABSA (Sherwood Applied Business Security Architecture) is a framework and methodology used to develop a risk-driven, business-aligned enterprise security architecture. It focuses on integrating security into business processes by linking security solutions directly to business goals, risks, and requirements.
+The framework is structured around six layers, starting from Business Requirements and cascading down to Operational Security Controls. It uses a matrix approach, and emphasizes aligning security strategies with business objectives through its lifecycle phases: Strategy and Planning, Design, Implementation, and Management.
+The following table summarizes the SABSA model’s core structure:
+
+| Layer                  | Focus                                 | Key Question                  | Output                                         |
+|------------------------|----------------------------------------|-------------------------------|------------------------------------------------|
+| **Business Requirements** | Business goals and drivers             | What are the business needs?  | Business goals, risks, and objectives          |
+| **Security Conceptual**   | Security strategies to meet business goals | What needs to be secured?     | Security architecture aligned to business      |
+| **Logical Architecture**  | Security services and functions         | How should it be secured?     | Security policies and service definitions      |
+| **Physical Architecture** | Technology and infrastructure design    | With what resources?          | Security solutions and tools                   |
+| **Component Architecture**| System-specific implementations         | How is it implemented?        | Technology configurations and integration      |
+| **Operational Architecture**| Management and operations             | How is it managed?            | Processes, monitoring, and response plans      |
+
+:link: The Sabsa site  https://sabsa.org/ provides resources, training, certification, and information about the SABSA framework, a methodology for creating risk-driven, business-aligned security architectures.
+
+### Open Questions ###
+1. Differentiate between acquisitions and mergers in the context of business operations.
+<details>
+  <summary>Show answer</summary>
+An acquisition involves one company purchasing another, leading to the acquired company's dissolution. In contrast, a merger combines two companies' assets to create a new entity, typically when both companies have comparable influence and size.
+</details>
+
+2. Explain the primary objective of divestiture and why it is often preferred over diversification.
+<details>
+  <summary>Show answer</summary>
+Divestiture aims to discontinue a business segment by selling it off entirely or partially. This frees up resources for more profitable and strategic ventures. It is often favored over diversification because it allows companies to focus on core competencies and streamline operations.
+</details>
+
+3. How do acquisitions and mergers pose cybersecurity risks? Provide specific examples.
+<details>
+  <summary>Show answer</summary>
+Acquisitions and mergers introduce risks like information disclosure, data loss, and downtime. For example, integrating disparate IT systems can create vulnerabilities, and employee layoffs or changes in access control can lead to data breaches.
+</details>
+
+4. Why is stringent cybersecurity crucial during divestitures?
+<details>
+  <summary>Show answer</summary>
+During divestitures, safeguarding sensitive data and maintaining confidentiality are paramount. Failure to implement robust cybersecurity measures can result in data leakage to competitors or unauthorized parties, damaging reputation and incurring legal liabilities.
+</details>
+
+5. What are the key steps to consider when evaluating a third party for security integration?
+<details>
+  <summary>Show answer</summary>
+Key steps include conducting on-site assessments, reviewing document exchange protocols, examining security policies and incident response documentation, and engaging an independent third-party auditor for a comprehensive review.
+</details>
+
+6. What does "Audit the auditor" mean in the context of third-party security assessments?
+<details>
+  <summary>Show answer</summary>
+"Audit the auditor" emphasizes the need to verify the credibility and integrity of the third-party auditor responsible for assessing your organization's security posture. This ensures the objectivity and reliability of the assessment findings.
+</details>
+
+7. Distinguish between business enablement and process enhancement.
+<details>
+  <summary>Show answer</summary>
+Business enablement focuses on leveraging technology and innovation to unlock new opportunities and capabilities. It goes beyond optimizing existing processes and aims to create new value propositions. Conversely, process enhancement involves improving existing processes to increase efficiency and quality of outcomes.
+</details>
+
+8. What is a governance committee in the realm of cybersecurity?
+<details>
+  <summary>Show answer</summary>
+A governance committee in cybersecurity is a group of stakeholders responsible for overseeing an organization's cybersecurity strategy, policies, and compliance. They ensure that cybersecurity efforts align with business goals, risk appetite, and regulatory requirements.
+</details>
+
+9. List three key functions of a cybersecurity governance committee.
+<details>
+  <summary>Show answer</summary>
+Three key functions are: (1) Strategic Oversight: setting the direction for cybersecurity initiatives; (2) Risk Management: monitoring cybersecurity risks and ensuring appropriate mitigation measures; (3) Compliance: ensuring adherence to regulatory and legal cybersecurity requirements.
+</details>
+
+10. Describe the SABSA framework and its primary focus.
+<details>  
+  <summary>Show answer</summary>
+The SABSA (Sherwood Applied Business Security Architecture) framework provides a structured methodology for developing a risk-driven, business-aligned enterprise security architecture. It focuses on integrating security into business processes by directly linking security solutions to business goals, risks, and requirements.
+</details>
