Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -384,3 +384,91 @@ Three key functions are: (1) Strategic Oversight: setting the direction for cybe
   <summary>Show answer</summary>
 The SABSA (Sherwood Applied Business Security Architecture) framework provides a structured methodology for developing a risk-driven, business-aligned enterprise security architecture. It focuses on integrating security into business processes by directly linking security solutions to business goals, risks, and requirements.
 </details>
+
+
+## 1.3.3 Organizational roles and responsibilities ##
+
+A security role refers to the contribution an individual makes to the implementation and management of security measures within an organization. These roles may not always be explicitly defined in job descriptions, as they can vary and evolve over time. Understanding security roles is essential for establishing effective communication and support frameworks within an organization.
+
+| **Role**                        | **Description** |
+|----------------------------------|------------------|
+| **Senior Manager / Functional Leader / Owner / Controller** | Ultimately responsible for the security maintained by an organization. Must sign off on all security policy issues and exercise due diligence in establishing security. Responsible for determining sensitivity/classification levels and access privileges. |
+| **Security Professional / IT Security Officer** | Trained and experienced engineer responsible for implementing security policies and solutions mandated by senior management. Focuses on protection more than function and implements security based on approved policies. |
+| **Custodian** | Implements prescribed protection as defined by policy and senior management. Responsible for backups, data integrity, deployment of solutions, and storage management. |
+| **User** | Any person with access to the secured system, tied to work tasks and least privilege. Must follow procedures and operate within defined security parameters. |
+| **Auditor** | Reviews and verifies implementation of security policies and solutions. Produces compliance/effectiveness reports and issues new directives based on findings. |
+| **Chief Executive Officer (CEO)** | Oversees day-to-day operations, strategic planning, and finances. Sets budgets, builds partnerships, ensures growth, and overall company success. |
+| **Chief Financial Officer (CFO)** | Handles accounting and financial activities. Determines financial needs, creates capital structure, oversees forecasting and budgeting. |
+| **Chief Information Officer (CIO)** | Oversees technology and information systems. Aligns IT with business goals, ensures secure operations, and leads the security program strategy. |
+| **Chief Privacy Officer (CPO)** | Ensures protection of personal and sensitive data. Oversees privacy policies, legal compliance, and often reports to the CSO. |
+| **Chief Security Officer (CSO)** | Understands and mitigates security risks. Creates the security program, ensures compliance, and protects assets and reputation. |
+| **Data Owner** | Responsible for classifying, securing, and approving disclosure of information. Defines access rights and handles security violations. Delegates daily protection to custodians. |
+| **Data Custodian** | Maintains and protects data by implementing controls, performing backups, ensuring integrity, and meeting policy requirements. |
+| **System Owner** | Oversees system security throughout lifecycle. Ensures integration of controls, reports vulnerabilities, and collaborates with data owners and response teams. |
+| **Security Administrator** | Implements and maintains security tools and systems. Manages user accounts, software, passwords, and focuses on network protection. |
+| **Supervisor (User Manager)** | Manages user activity and assets. Ensures users follow security responsibilities and informs admin of role changes. |
+| **Change Control Analyst** | Reviews and approves/rejects change requests to systems or software. Ensures changes are secure and maintain performance. |
+| **Data Analyst** | Organizes and structures data to meet company objectives. Works with data owners to align data storage with business needs. |
+
+:necktie: Security roles need to be in sync and cohesive with organizational structures. Certain companies may define and assign roles to oversee data, systems, and processes (e.g., data owner, system owner, process owner).
+
+When talking about roles it is always important the difference between privacy and cybersecurity.
+
+:bulb: **Privacy vs Cybersecurity.**  **Privacy** refers to the rights individuals have to control their personal information and how it’s used. It’s about ensuring that personal data is handled responsibly, often under specific regulations or laws. For example, when you fill out an online form, you may have the right to control who can access your data and how it's used, like opting out of marketing emails or requesting your data be deleted. **Cybersecurity**, however, is the practice of protecting data, networks, and systems from attacks, breaches, and unauthorized access. It includes technologies, processes, and practices designed to safeguard systems from threats like hacking or malware. For instance, encryption and firewalls help protect sensitive data from being exposed or stolen.
+Cybersecurity is essential for achieving privacy because, without strong security measures, personal data is vulnerable to unauthorized access and exploitation, which would undermine the privacy protections put in place.
+
+:bulb: The GDPR (General Data Protection Regulation) is commonly misinterpreted as a "privacy law," but it’s actually a data protection law. It establishes rules for how organizations should protect the personal data of EU citizens, emphasizing the security and proper handling of data.
+
+### Open Questions ###
+1. Differentiate between the roles of a Data Owner and a Data Custodian.
+<details>
+  <summary>Show answer</summary>
+The Data Owner is ultimately responsible for the protection and use of specific information, including defining security requirements and access rights. The Data Custodian implements and maintains security controls for data protection, following the guidelines set by the Data Owner.
+</details>
+
+2. Explain the principle of least privilege and its relevance to user access
+<details>
+  <summary>Show answer</summary>
+The principle of least privilege limits user access to only the resources necessary for their job duties. This minimizes the potential for unauthorized access or damage in case of accidental or malicious activity.
+</details>
+
+3. What are the primary responsibilities of a Security Professional/IT Security Officer?
+<details>
+  <summary>Show answer</summary>
+The Security Professional/IT Security Officer implements security policies and solutions defined by senior management. They focus on protecting the organization's assets and systems from threats.
+</details>
+
+4. How does the role of an Auditor contribute to the effectiveness of a security policy?
+<details>
+  <summary>Show answer</summary>
+The Auditor reviews and verifies the implementation of the security policy and identifies any weaknesses or deviations. Their reports help ensure compliance and the effectiveness of security measures.
+</details>
+
+5. What is the significance of change control in maintaining network security?
+<details>
+  <summary>Show answer</summary>
+Change control ensures that any modifications to the network, systems, or software are approved and implemented securely. It helps prevent the introduction of vulnerabilities that could compromise security.
+</details>
+
+6. Explain the difference between privacy and cybersecurity.
+<details>
+  <summary>Show answer</summary>
+Privacy concerns the rights individuals have over their personal information and how it is used. Cybersecurity focuses on protecting data, networks, and systems from threats and unauthorized access.
+</details>
+
+7. Why is cybersecurity essential for achieving privacy?
+<details>
+  <summary>Show answer</summary>
+Strong cybersecurity measures are necessary to prevent unauthorized access and exploitation of personal data. Without cybersecurity, privacy protections would be undermined.
+</details>
+
+8. How does the GDPR contribute to data protection?
+<details>
+  <summary>Show answer</summary>
+The GDPR establishes rules for organizations on protecting the personal data of EU citizens. It emphasizes data security, proper handling, and individuals' rights regarding their data.
+</details>
+
+## 1.3.4 Security control frameworks (e.g., International Organization for Standardization (ISO), National Institute of Standards and Technology (NIST), Control Objectives for Information and Related Technology (COBIT), Sherwood Applied Business Security Architecture (SABSA), Payment Card Industry (PCI), Federal Risk and Authorization Management Program (FedRAMP)) ##
+
+Security control frameworks specify formalized sets of controls or security measures that organizations should adopt to safeguard their assets and mitigate risks. The following table describes the most common:
+
