Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -468,7 +468,109 @@ Strong cybersecurity measures are necessary to prevent unauthorized access and e
 The GDPR establishes rules for organizations on protecting the personal data of EU citizens. It emphasizes data security, proper handling, and individuals' rights regarding their data.
 </details>
 
+---
+
 ## 1.3.4 Security control frameworks (e.g., International Organization for Standardization (ISO), National Institute of Standards and Technology (NIST), Control Objectives for Information and Related Technology (COBIT), Sherwood Applied Business Security Architecture (SABSA), Payment Card Industry (PCI), Federal Risk and Authorization Management Program (FedRAMP)) ##
 
 Security control frameworks specify formalized sets of controls or security measures that organizations should adopt to safeguard their assets and mitigate risks. The following table describes the most common:
 
+| **Framework** | **Description** | **Link** |
+|---------------|-----------------|----------|
+| **ISO 27001** | Widely used security framework providing best practice recommendations for an ISMS (Information Security Management System). Defines 94 controls across 4 categories (Annex A):<br>- Organizational Controls: 37<br>- People Controls: 8<br>- Physical Controls: 14<br>- Technological Controls: 34 | [Link](https://en.wikipedia.org/wiki/ISO/IEC_27001) |
+| **ISO 27002** | Provides the Code of practice for information security controls, serving as implementation guidance for ISO 27001 controls. | [Link](https://en.wikipedia.org/wiki/ISO/IEC_27002) |
+| **NIST 800-53** | Offers a set of security controls for US federal agencies (and optional for other companies). | [Link](https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final) |
+| **NIST RMF** | Provides a comprehensive, flexible, repeatable, and measurable 7-step process for managing information security and privacy risk. | [Link](https://csrc.nist.gov/projects/risk-management/about-rmf) |
+| **COBIT** | Developed by IT auditors at ISACA, useful for audit and assurance work, focusing on control objectives for information and related technologies. | [Link](https://en.wikipedia.org/wiki/COBIT) |
+| **ITIL** | Defines best practices for delivering IT services aligned with business goals, especially around change, configuration, access, event, and availability management. | [Link](https://en.wikipedia.org/wiki/ITIL) |
+| **HIPAA** | Framework focused on safeguarding medical information, particularly relevant in the healthcare industry. | [Link](https://en.wikipedia.org/wiki/Health_Insurance_Portability_and_Accountability_Act) |
+| **SOX** | US federal law requiring top management to certify financial accuracy. Emphasizes integrity and availability of financial records. | [Link](https://en.wikipedia.org/wiki/Sarbanes%E2%80%93Oxley_Act) |
+| **FedRAMP** | Standardized approach for security assessment, authorization, and monitoring of cloud products/services used by US federal agencies. | [Link](https://en.wikipedia.org/wiki/FedRAMP) |
+| **FISMA** | Defines security requirements for US federal agencies and contractors; mandates agency-wide information security programs. | [Link](https://en.wikipedia.org/wiki/Federal_Information_Security_Management_Act_of_2002) |
+| **PCI DSS** | Ensures secure payment transactions and protection of cardholder data. Widely used in finance and retail. | [Link](https://en.wikipedia.org/wiki/Payment_Card_Industry_Data_Security_Standard) |
+| **SABSA** | Sherwood Applied Business Security Architecture; a risk- and business-aligned framework for enterprise security architecture. | [Link](https://en.wikipedia.org/wiki/Sherwood_Applied_Business_Security_Architecture) |
+| **CIS** | The Center for Internet Security Controls consists of 18 controls, including inventory, data protection, configuration, vulnerability management, and more. | [Link](https://en.wikipedia.org/wiki/Center_for_Internet_Security) |
+
+:bulb: Frameworks undergo regular updates, and while you are not required to know their specific release versions, you should be familiar with the primary topics they cover. Take the time to explore the provided links and add your observations to the table above.
+
+:brain: It is advisable not to rely on memorization of the table above. To truly understand its content, it is necessary to invest time in studying each framework thoroughly. While memorizing the table might suffice for answering CISSP questions, the information may be forgotten shortly after the exam. It's best to avoid this approach.
+
+Remember that ISO/IEC 27001 and NIST SP 800-53 are two widely recognized frameworks for managing and implementing information security controls. As we have seen in the table above:
+- ISO 27001: An international standard for information security management systems (ISMS), used globally by organizations of all sizes and industries.
+- NIST SP 800-53: A U.S.-focused standard providing detailed security and privacy controls, widely adopted by federal agencies and private organizations needing compliance with government regulations.
+
+They have in common: 
+Risk-Based Approach: Both frameworks emphasize identifying and mitigating risks to protect assets.
+Control Categories: They cover similar areas like access control, incident response, and physical security.
+Customizability: Both allow organizations to tailor controls based on their specific needs and risks.
+Focus on Continuous Improvement: Both encourage ongoing monitoring, assessment, and refinement of security measures.
+
+While their key differences are depicted in the table below:
+
+| **Aspect**     | **ISO 27001**                                   | **NIST SP 800-53**                                             |
+|----------------|--------------------------------------------------|----------------------------------------------------------------|
+| **Origin**     | International (ISO/IEC Standard)                | U.S. National Institute of Standards and Technology (NIST)     |
+| **Scope**      | Broad, global, applicable to any industry       | Primarily U.S. government agencies but adaptable for others     |
+| **Focus**      | Management framework for ISMS                   | Detailed technical and operational controls                    |
+| **Certification** | Offers certification via audits                 | No formal certification process; self-assessment               |
+| **Detail Level**| High-level control objectives                   | Highly detailed, specific control implementations              |
+
+### Open Questions ###
+1. What is the purpose of security control frameworks?
+<details>
+  <summary>Show answer</summary>
+Security control frameworks provide formalized sets of controls and security measures that organizations can implement to protect their assets and mitigate potential risks. They offer a structured approach to information security management.
+</details>
+
+2. What are three key differences between ISO 27001 and NIST 800-53?
+<details>
+  <summary>Show answer</summary>
+ISO 27001 is an internationally recognized standard, while NIST 800-53 is primarily for US federal agencies. ISO 27001 focuses on establishing an ISMS, while NIST 800-53 provides a catalog of specific security controls. ISO 27001 is more flexible and principle-based, while NIST 800-53 is more prescriptive.
+</details>
+
+3. How does COBIT relate to IT auditing and assurance work?
+<details>
+  <summary>Show answer</summary>
+COBIT is developed by ISACA, a professional association for IT auditors. It focuses on control objectives for information and related technologies, providing a framework for auditors to assess and evaluate IT controls within an organization.
+</details>
+
+4. Describe the relationship between ITIL and business goals.
+<details>
+  <summary>Show answer</summary>
+ITIL emphasizes aligning IT services with business objectives. It offers best practices for IT service management processes, ensuring that IT operations effectively support the organization's overall goals and contribute to its success.
+</details>
+
+5. What specific industry is HIPAA designed to protect, and why?
+<details>
+  <summary>Show answer</summary>
+HIPAA is designed to protect the healthcare industry by safeguarding sensitive patient health information. It establishes privacy and security rules to prevent unauthorized access, use, or disclosure of protected health information (PHI).
+</details>
+
+6. What is the main focus of SOX, and how does it impact financial reporting practices?
+<details>
+  <summary>Show answer</summary>
+SOX aims to ensure the accuracy and reliability of financial reporting by publicly traded companies. It mandates top management certification of financial information and strengthens internal controls to prevent financial fraud and accounting scandals.
+</details>
+
+7. Explain the purpose of FedRAMP and its relevance to cloud services.
+<details>
+  <summary>Show answer</summary>
+FedRAMP provides a standardized approach for assessing, authorizing, and continuously monitoring the security of cloud products and services used by the US Federal Government. It ensures that cloud solutions meet the necessary security requirements before being adopted by federal agencies.
+</details>
+
+8. How does FISMA contribute to information security within US Federal Government agencies?
+<details>
+  <summary>Show answer</summary>
+FISMA requires US Federal Government agencies and contractors to develop and implement agency-wide information security programs. It establishes a framework for managing risks, protecting sensitive data, and ensuring the secure operation of federal information systems.
+</details>
+
+9. What is the primary goal of PCI DSS, and what type of data does it aim to secure?
+<details>
+  <summary>Show answer</summary>
+PCI DSS aims to secure payment card transactions and protect cardholder data from theft and fraud. It establishes security standards for organizations that handle credit card information, including requirements for data encryption, access control, and network security.
+</details>
+
+10. How does SABSA differ from other frameworks in its approach to security architecture?
+<details>  
+  <summary>Show answer</summary>
+SABSA distinguishes itself by focusing on aligning security architecture with business objectives. It provides a framework for risk management and security design that is closely integrated with the organization's overall business goals and strategies.
+</details>
